<resources>
    <string name="app_name">TIO CR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_image_topic">Sample Image Topic</string>
    <string name="sample_image">sample Image</string>
    <string name="home">Home</string>
    <string name="add_new_image">add new image</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="forgort_password">Forgort Password</string>
    <string name="taken_image_photo">Taken image Photo</string>
    <string name="title">Title</string>
    <string name="save_imae_button">Save Imae Button</string>
    <string name="annotate_text">Annotate Text</string>
    <string name="no_text_was_found_in_this_image">No Text Was found in this Image</string>
    <string name="speak_text">Speak text</string>
    <string name="search_text">Search Text</string>
    <string name="appname">AppName</string>
    <string name="button">Button</string>
    <string name="set_up_account">Set Up Account</string>
    <string name="email">Email</string>
    <string name="no_name_found">No Name found</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="enter_email">Enter Email</string>
    <string name="search">Search</string>
    <string name="tio_cr_notes_not_found">TIO CR Notes Not Found</string>
    <string name="please_add_notes_by_selecting_the_green_button">Please Add Notes by selecting the green button</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="contact_us_at_chill_dev03_gmail_com">Contact us at chill.dev03@gmail.com</string>
    <string name="tio_ocr_2022">TIO OCR @ 2022</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="no_info_found">no info found</string>
    <string name="name">Name</string>
    <string name="image_text">Image Text</string>
</resources>