<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureTakenimageActivity">

    <ImageView
        android:id="@+id/ivCapturedImage"
        android:layout_width="145dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/taken_image_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ivCapturedImage"
        app:layout_constraintTop_toBottomOf="@+id/ivbtnSave" />

    <ImageButton
        android:id="@+id/ivbtnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/save_imae_button"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ivbtnAnnotate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/annotate_text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ivbtnSave"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvImageText"
        android:layout_width="370dp"
        android:layout_height="463dp"
        android:layout_marginTop="16dp"
        android:text="@string/no_text_was_found_in_this_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch" />

    <ImageButton
        android:id="@+id/ivbtnPlayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/speak_text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ivbtnAnnotate"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/search_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCapturedImage" />
</androidx.constraintlayout.widget.ConstraintLayout>