<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageButton
        android:id="@+id/ivbtnSaveDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/save_imae_button"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_save"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ivbtnAnnotateDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/annotate_text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ivbtnSaveDetails"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvImageTextDetails"
        android:layout_width="370dp"
        android:layout_height="463dp"
        android:layout_marginTop="36dp"
        android:scrollbars="vertical"
        android:text="@string/no_text_was_found_in_this_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearchDetails" />

    <ImageButton
        android:id="@+id/ivbtnPlayTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/speak_text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ivbtnAnnotateDetails"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_play"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etSearchDetails"
        android:layout_width="377dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/search_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDetails" />

    <TextView
        android:id="@+id/tvTitleDetails"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="App Name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>